--- a/src/pages/css_files/ShowRoadmaps.css
+++ b/src/pages/css_files/ShowRoadmaps.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
+
 .cards-edit{
-    /* background-color: black; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -8,6 +11,7 @@
 }
 
 .roadmap-card{
+    font-family: 'Montserrat', sans-serif;
     background-color: #B7E1A1;
     border: 4px solid white;
     border-radius: 25px;
@@ -34,4 +38,8 @@
     margin: 0px;
     padding: 0px;
     display: inline;
+}
+
+.roadmap-card .material-symbols-outlined{
+    font-size: 100px;
 }
