--- a/src/components/css_files/Header.css
+++ b/src/components/css_files/Header.css
@@ -3,19 +3,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
 
 /* HEADER DESIGNING STARTS*/
-header > h1 > a{
+header>h1>a {
     text-decoration: none;
     color: inherit;
     font-family: inherit;
     font-size: inherit;
     font-style: inherit;
 }
+
 .app-logo {
     font-family: 'Montserrat Subrayada', sans-serif;
     font-size: 60px;
     font-style: italic;
     cursor: pointer;
     margin-right: auto;
+    margin-block: 0px;
 }
 
 
@@ -27,13 +29,13 @@ a {
 }
 
 header {
-    margin-top: -3%;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
-    padding: 20px 25px;
-    padding-bottom: 0px;
+    padding-inline: 20px;
+    padding-block: 10px;
+    margin-bottom: 10px;
 }
 
 .nav-links li {
