--- a/src/pages/css_files/About.css
+++ b/src/pages/css_files/About.css
@@ -30,7 +30,7 @@
 /* TOP DESIGNING */
 .top-wave {
     position: absolute;
-    top: 0;
+    top: -4px;
     left: 0;
     width: 100%;
     overflow: hidden;
