--- a/src/pages/css_files/body_rm.css
+++ b/src/pages/css_files/body_rm.css
@@ -68,7 +68,7 @@
 
 .CTA:hover {
     background-color: #C7E9B0;
-    transform: translateY(-0.40rem)
+    transform: translateY(-0.40rem);
 }
 
 /* BODY DESIGNING ENDS*/
@@ -89,6 +89,5 @@
 
 .static-rm .react-flow__node {
     font-family: 'Montserrat', sans-serif;
-    proOptions={{ hideAttribution: true }}
 
 }
