--- a/src/pages/css_files/ShowRoadmaps.css
+++ b/src/pages/css_files/ShowRoadmaps.css
@@ -26,6 +26,7 @@
     align-items: center;
     transition: transform 0.8s ease;
     cursor: pointer;
+    position: relative;
 }
 
 .roadmap-card:hover{
@@ -42,4 +43,10 @@
 
 .roadmap-card .material-symbols-outlined{
     font-size: 100px;
+}
+
+#del-rm{
+    position: absolute;
+    top: 10px;
+    right: 12px;
 }
