--- a/src/pages/css_files/Certificate.css
+++ b/src/pages/css_files/Certificate.css
@@ -8,6 +8,12 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+
+    background-color: #ffffff;
+    opacity: 1;
+    background-image:  linear-gradient(#6D9054 1.1px, transparent 1.1px), 
+    linear-gradient(to right, #6D9054 1.1px, #ffffff 1.1px);
+    background-size: 22px 22px;
 }
 
 .certi h1,
@@ -49,4 +55,27 @@ p {
 
 .certi img {
     height: 100px;
+}
+
+/* NOT ELIGIBLE STYLING */
+.noteli{
+    display: flex;
+    min-height: 100vh;
+    min-width: 50vw;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #ffffff;
+    opacity: 1;
+    background-image:  linear-gradient(#6D9054 1.1px, transparent 1.1px), 
+    linear-gradient(to right, #6D9054 1.1px, #ffffff 1.1px);
+    background-size: 22px 22px;
+}
+
+.noteli h1{
+    padding: 30px;
+    border: 3px solid black;
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(240, 255, 255, 0.5);
+
 }
