--- a/src/pages/css_files/ShowRoadmaps.css
+++ b/src/pages/css_files/ShowRoadmaps.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
 
-.cards-edit{
+.cards-edit {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -10,42 +10,46 @@
     flex-wrap: wrap;
 }
 
-.roadmap-card{
+.roadmap-card {
     font-family: 'Montserrat', sans-serif;
     background-color: #B7E1A1;
     border: 4px solid white;
     border-radius: 25px;
     box-shadow: 6px 8px 4px rgba(0, 0, 0, 0.5);
     padding: 10px;
-    min-height: 15rem;
-    min-width: 15rem;
+    height: 15rem;
+    width: 15rem;
     margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: transform 0.8s ease;
-    cursor: pointer;
     position: relative;
+    padding: 25px;
 }
 
-.roadmap-card:hover{
+.roadmap-card:hover {
     background-color: #9bbd89;
     transform: translateY(-0.70rem)
-
 }
 
-.roadmap-card h1{
+.roadmap-card h1 {
     margin: 0px;
     padding: 0px;
     display: inline;
+    cursor: pointer;
+    padding: 20px;
+    white-space: normal;
+    word-wrap: break-word;
+
 }
 
-.roadmap-card .material-symbols-outlined{
+.roadmap-card .material-symbols-outlined {
     font-size: 100px;
 }
 
-#del-rm{
+#del-rm {
     position: absolute;
     top: 10px;
     right: 12px;
