--- a/src/pages/css_files/ViewRoadmap.css
+++ b/src/pages/css_files/ViewRoadmap.css
@@ -2,6 +2,7 @@
     border-radius: 20px;
     border-width: 3px;
     font-size: 24px;
+    /* text-decoration: line-through; */
 }
 
 #visible-rm .react-flow{
