--- a/src/pages/css_files/Certificate.css
+++ b/src/pages/css_files/Certificate.css
@@ -8,6 +8,7 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 
     background-color: #ffffff;
     opacity: 1;
@@ -23,7 +24,7 @@ p {
 }
 
 .certi {
-    border: 30px solid;
+    border: 30px solid #467033;
     padding: 30px;
     min-height: 70vh;
     min-width: 60vw;
@@ -32,7 +33,6 @@ p {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    border-image: linear-gradient(#9DC08B, #396126) 30;
     background-image: url('/src/components/images/green-border-blob.svg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -77,5 +77,22 @@ p {
     border: 3px solid black;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(240, 255, 255, 0.5);
+}
 
+.load-but{
+    padding: 9px 25px;
+    background-color: #9DC08B;
+    /* color: whitesmoke; */
+    font-weight: bold;
+    font-size: 18px;
+    letter-spacing: 1.5px;
+    border: none;
+    border-radius: 50px;
+    transition:  0.8s ease;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
+.load-but:hover {
+    background-color: #C7E9B0;
 }
