--- a/src/components/css_files/Forest.css
+++ b/src/components/css_files/Forest.css
@@ -7,16 +7,16 @@
     gap: 1rem;
 }
 
-.forest .contactBtn{
+.forest .contactBtn {
     background-color: #884A39;
     color: whitesmoke;
     font-weight: bold;
     font-size: 18px;
     letter-spacing: 1.5px;
-    transition:  0.8s ease;
+    transition: 0.8s ease;
 }
 
-.forest .contactBtn:hover{
+.forest .contactBtn:hover {
     letter-spacing: 2px;
 }
 
@@ -63,4 +63,50 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.discoBtn {
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    display: inline-block;
+    margin: auto;
+    padding: 1rem 1.9rem;
+    background-color: beige;
+    color: #884A39;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 3px;
+    cursor: pointer;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        border: 3px solid transparent;
+        transition: border-width 0.25s;
+        border-image: linear-gradient(135deg, #A0038B, #FD0000, #FDFD00);
+        border-image-slice: 1;
+        pointer-events: none;
+        filter: hue-rotate(0deg);
+        animation: 1s linear 0s infinite normal both paused hueShift;
+        border-width: 7px;
+        animation-play-state: running;
+        transition: 0.5s ease;
+    }
+
+    &:hover:before {
+        font-weight: bold;
+        box-shadow: 0px 0px 80px #9DC08B, 0px 0px 80px #9DC08B, 0px 0px 80px #9DC08B;
+
+    }
+}
+
+@keyframes hueShift {
+    100% {
+        filter: hue-rotate(360deg);
+    }
 }
