--- a/src/pages/css_files/Certificate.css
+++ b/src/pages/css_files/Certificate.css
@@ -15,6 +15,10 @@
     background-image:  linear-gradient(#6D9054 1.1px, transparent 1.1px), 
     linear-gradient(to right, #6D9054 1.1px, #ffffff 1.1px);
     background-size: 22px 22px;
+
+    background-position: center;
+    background-attachment: fixed;
+
 }
 
 .certi h1,
