--- a/src/pages/css_files/Help.css
+++ b/src/pages/css_files/Help.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    gap: 50px;
+    gap: 80px;
     padding: 30px;
 }
 
@@ -34,9 +34,16 @@
 }
 
 .help-blocks{
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    gap: 25px;
+    gap: 20px;
+}
+
+.help-blocks>h1{
+    background-color:#6D9054;
+    padding: 8px 12px;
+    border-radius: 20px;
 }
