--- a/src/pages/css_files/ShowRoadmaps.css
+++ b/src/pages/css_files/ShowRoadmaps.css
@@ -1,60 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap");
 
 .cards-edit {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .roadmap-card {
-    font-family: 'Montserrat', sans-serif;
-    background-color: #B7E1A1;
-    border: 4px solid white;
-    border-radius: 25px;
-    box-shadow: 6px 8px 4px rgba(0, 0, 0, 0.5);
-    height: 15rem;
-    width: 15rem;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.8s ease;
-    position: relative;
-    padding: 25px;
+  font-family: "Montserrat", sans-serif;
+  background-color: #b7e1a1;
+  border: 4px solid white;
+  border-radius: 25px;
+  box-shadow: 6px 8px 4px rgba(0, 0, 0, 0.5);
+  height: 15rem;
+  width: 15rem;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.8s ease;
+  position: relative;
+  padding: 25px;
 }
 
 .roadmap-card:hover {
-    background-color: #9bbd89;
-    transform: translateY(-0.70rem)
+  background-color: #9bbd89;
+  transform: translateY(-0.7rem);
 }
 
 .roadmap-card h1 {
-    margin: 0px;
-    display: inline;
-    cursor: pointer;
-    padding: 30px;
-    white-space: normal;
-    word-wrap: break-word;
-    text-align: center;
-
+  margin: 0px;
+  display: inline;
+  cursor: pointer;
+  padding: 30px;
+  white-space: normal;
+  word-wrap: break-word;
+  text-align: center;
 }
 
 .roadmap-card .material-symbols-outlined {
-    font-size: 100px;
+  font-size: 100px;
 }
 
 #del-rm {
-    position: absolute;
-    top: 10px;
-    right: 12px;
+  position: absolute;
+  top: 10px;
+  right: 12px;
 }
 
-.progressparent{
-    position: absolute;
-    bottom: 15px;
+.progressparent {
+  position: absolute;
+  bottom: 15px;
+}
+
+.roadmap-card .edit-btn {
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+/* .roadmap-card .material-symbols-outlined {
+  font-size: 20px;
+} */
+
+#edit-pen{
+    font-size: 20px;
+}
+
+.roadmap-card .edit-btn:hover {
+  background-color: #9db2bf;
 }
