--- a/src/pages/css_files/ViewRoadmap.css
+++ b/src/pages/css_files/ViewRoadmap.css
@@ -2,7 +2,8 @@
     border-radius: 20px;
     border-width: 3px;
     font-size: 24px;
-    /* text-decoration: line-through; */
+    min-width: fit-content;
+    max-width: 150px;
 }
 
 #visible-rm .react-flow{
