button bounce revised

--- a/src/components/css_files/Header.css
+++ b/src/components/css_files/Header.css
@@ -68,8 +68,8 @@ header {
     background-color: #C7E9B0;
 }
 
-#focus-onstart {
-    animation: myAnimation 3s ease;
+.focus-onstart {
+    animation: myAnimation 2s ease;
     animation-iteration-count: 5;
     animation-timing-function: ease-in-out;
 }
