confetti added on overlay

--- a/src/components/css_files/Overlay.css
+++ b/src/components/css_files/Overlay.css
@@ -14,5 +14,7 @@
     color: #ffffff;
     font-size: 32px;
     max-width: 32rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
   }
   
